<resources>
    <string name="app_name">PMAPresecan</string>
    <string name="header_text">Studenti</string>
    <string name="select_language_prompt">Odaberite jezik</string>
    <string name="croatian">Hrvatski</string>
    <string name="english">Engleski</string>
    <string name="hungarian">Mađarski</string>

    <string name="label_ime">Ime</string>
    <string name="label_prezime">Prezime</string>
    <string name="label_datumrod">Datum rođenja</string>
    <string name="label_predmet">Predmet</string>
    <string name="label_profesor">Profesor</string>
    <string name="label_predavanja">Sati predavanja</string>
    <string name="label_lv">Sati LV</string>
    <string name="label_tip">Tip predmeta</string>
    <string name="label_obavezni">Obavezni</string>
    <string name="label_izborni">Izborni</string>
    <string name="button_vrati">Vrati na početak</string>
    <string name="button_dalje">Dalje</string>
    <string name="label_student">Student</string>
    <string name="label_sazetak">Sažetak</string>
    <string name="toast_popunite_polja">Popunite sva polja za unos</string>
    <string name="toast_nije_dopusteno">Vraćanje unatrag nije dopušteno</string>
    <string name="toast_broj">Unesite broj veći ili jednak 0</string>

    <string-array name="languages">
        <item>@string/select_language_prompt</item>
        <item>@string/croatian</item>
        <item>@string/english</item>
        <item>@string/hungarian</item>
    </string-array>
</resources>